--- a/frontend/app/games/new/NewGameForm.module.scss
+++ b/frontend/app/games/new/NewGameForm.module.scss
@@ -1,8 +1,8 @@
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 100%;
-  width: 100%;
+  height: 500px;
+  width: 500px;
   padding: 0 20px;
 }
 
