--- a/frontend/components/MinesweeperGame/MinesweeperGame.module.scss
+++ b/frontend/components/MinesweeperGame/MinesweeperGame.module.scss
@@ -1,8 +1,21 @@
+.gameWrapper {
+  position: relative;
+}
+
 .gameOver {
   position: absolute;
   background-color: #ff0000;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: var(--noto-font);
+  text-transform: uppercase;
 }
 
 .gameInfo {
@@ -18,5 +31,6 @@
   p {
     margin: 0;
     padding: 10px;
+    font-family: var(--noto-font);
   }
 }
